--- a/Yukari/src/main/res/xml/pref_filter.xml
+++ b/Yukari/src/main/res/xml/pref_filter.xml
@@ -5,7 +5,7 @@
         android:title="ミュート設定"
         android:summary="条件を指定してツイートや通知などを非表示にします">
         <intent
-            android:targetPackage="shibafu.yukari"
+            android:targetPackage="@string/applicationId"
             android:targetClass="shibafu.yukari.activity.MuteActivity"/>
     </Preference>
     <Preference
@@ -13,7 +13,7 @@
         android:title="オートミュート設定"
         android:summary="指定した条件にヒットする発言をしたユーザを1時間ミュートする設定を行います">
         <intent
-            android:targetPackage="shibafu.yukari"
+            android:targetPackage="@string/applicationId"
             android:targetClass="shibafu.yukari.activity.AutoMuteActivity"/>
     </Preference>
     <CheckBoxPreference
