横画面でツイート詳細を開くとクラッシュするバグの修正

--- a/Yukari/src/main/res/layout-land/activity_status.xml
+++ b/Yukari/src/main/res/layout-land/activity_status.xml
@@ -26,7 +26,7 @@
             android:paddingRight="10dp"
             android:paddingTop="12dp">
 
-            <shibafu.yukari.view.TweetView
+            <FrameLayout
                 android:id="@+id/status_tweet"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
