--- a/Yukari/src/alpha/res/xml/shortcuts.xml
+++ b/Yukari/src/alpha/res/xml/shortcuts.xml
@@ -9,7 +9,7 @@
         android:shortcutDisabledMessage="@string/title_activity_tweet">
         <intent
             android:action="android.intent.action.VIEW"
-            android:targetPackage="shibafu.yukari"
+            android:targetPackage="shibafu.yukari.alpha"
             android:targetClass="shibafu.yukari.activity.TweetActivity"/>
         <categories android:name="android.shortcut.conversation"/>
     </shortcut>
