--- a/Yukari/src/main/res/layout/row_user.xml
+++ b/Yukari/src/main/res/layout/row_user.xml
@@ -21,10 +21,8 @@
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/user_icon"
             android:layout_marginLeft="8dp"
-            android:textSize="18sp"
             android:ellipsize="end"
-            android:layout_alignParentRight="true"
-        android:layout_marginTop="-2dp" />
+            android:layout_alignParentRight="true" />
 
     <TextView
             android:layout_width="wrap_content"
@@ -35,7 +33,6 @@
             android:layout_alignLeft="@+id/user_name"
             android:layout_marginTop="2dp"
             android:layout_alignParentRight="true"
-            android:ellipsize="end"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:ellipsize="end" />
 
 </RelativeLayout>
