Material DesignなProgressBarをAppCompat内のDrawableを用いた実装に変更

--- a/Yukari/src/main/res/layout/row_loading.xml
+++ b/Yukari/src/main/res/layout/row_loading.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     android:paddingBottom="36dp">
 
-    <com.rey.material.widget.ProgressView
-        style="@style/Yukari.Material.CircularProgress"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+    <shibafu.yukari.view.MaterialProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/pbLoading"
         android:visibility="invisible"
         android:layout_gravity="center" />
