--- a/Yukari/src/main/res/layout/menu_profile_manage_follow.xml
+++ b/Yukari/src/main/res/layout/menu_profile_manage_follow.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.rey.material.widget.ProgressView
-        style="@style/Yukari.Material.CircularProgress"
+    <shibafu.yukari.view.MaterialProgressBar
         android:id="@+id/progressBar"
         android:layout_width="36dp"
         android:layout_height="36dp"
