--- a/Yukari/src/main/res/layout/row_loading.xml
+++ b/Yukari/src/main/res/layout/row_loading.xml
@@ -4,10 +4,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.rey.material.widget.ProgressView
-        style="@style/Yukari.Material.CircularProgress"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+    <shibafu.yukari.view.MaterialProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/pbLoading"
         android:visibility="invisible"
         android:layout_gravity="center" />
