--- a/Yukari/src/main/res/xml/pref_notify.xml
+++ b/Yukari/src/main/res/xml/pref_notify.xml
@@ -30,4 +30,8 @@
         android:title="ストリーミング通信状態通知"
         android:summary="ストリーミングに接続・切断された時にメッセージを表示します"
         android:defaultValue="true"/>
+    <Preference
+        android:key="pref_notif_system_config"
+        android:title="システムの通知設定を開く"
+        android:summary="Android 8.0以降ではシステムの通知設定からカスタマイズできます。"/>
 </PreferenceScreen>
