--- a/Yukari/src/main/res/xml/pref_notify.xml
+++ b/Yukari/src/main/res/xml/pref_notify.xml
@@ -34,4 +34,8 @@
         android:key="pref_notif_system_config"
         android:title="システムの通知設定を開く"
         android:summary="Android 8.0以降ではシステムの通知設定からカスタマイズできます。"/>
+    <CheckBoxPreference
+        android:key="pref_notif_per_account_channel"
+        android:title="アカウント別の通知設定を使う"
+        android:summary="システムの通知設定の項目を、アカウント別に分割します。\nアカウントごとに細かな設定を行えるようになります。\n(※Android 8.0以上のみ有効)"/>
 </PreferenceScreen>
