--- a/Yukari/src/main/res/layout/activity_tweet.xml
+++ b/Yukari/src/main/res/layout/activity_tweet.xml
@@ -9,29 +9,44 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="shibafu.yukari.activity.TweetActivity">
 
-    <EditText
-        android:id="@+id/etTweetInput"
+    <LinearLayout
+        android:id="@+id/llTweetInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:layout_alignLeft="@+id/tvTweetCount"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/wrapTweetBy"
-        android:gravity="left|top"
-        android:inputType="textMultiLine"
-        android:maxLines="6"
-        android:minLines="2">
+        android:layout_below="@+id/wrapTweetBy">
 
-        <requestFocus />
-    </EditText>
+        <EditText
+            android:id="@+id/etTweetSpoiler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="注意書き"
+            android:inputType="text"
+            android:visibility="gone"/>
+
+        <EditText
+            android:id="@+id/etTweetInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="left|top"
+            android:inputType="textMultiLine"
+            android:maxLines="6"
+            android:minLines="2">
+            <requestFocus />
+        </EditText>
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnTweet"
         android:layout_width="130dp"
         android:layout_height="90dp"
         android:layout_alignBottom="@+id/tlTweetAction"
-        android:layout_alignRight="@+id/etTweetInput"
-        android:layout_below="@+id/etTweetInput"
+        android:layout_alignRight="@+id/llTweetInput"
+        android:layout_below="@+id/llTweetInput"
         android:layout_marginLeft="16dp"
         android:layout_toRightOf="@+id/tlTweetAction"
         android:text="Tweet" />
@@ -77,8 +92,8 @@
         android:id="@+id/tlTweetAction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/etTweetInput"
-        android:layout_below="@+id/etTweetInput">
+        android:layout_alignLeft="@+id/llTweetInput"
+        android:layout_below="@+id/llTweetInput">
 
         <TableRow
             android:layout_width="fill_parent"
@@ -156,6 +171,13 @@
                 android:visibility="gone"/>
 
             <ImageButton
+                android:id="@+id/ibTweetSpoiler"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="?attr/tweetSpoilerDrawable"
+                android:visibility="gone"/>
+
+            <ImageButton
                 android:id="@+id/ibTweetSNPicker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -197,7 +219,7 @@
         android:id="@+id/ivProfileHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/etTweetInput"
+        android:layout_alignLeft="@+id/llTweetInput"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/tvTweetTitle"
         android:scaleType="fitXY"
