--- a/Yukari/src/main/res/values/attrs.xml
+++ b/Yukari/src/main/res/values/attrs.xml
@@ -37,6 +37,7 @@
     <attr name="tweetVoiceDrawable" format="reference"/>
     <attr name="tweetMorseDrawable" format="reference"/>
     <attr name="tweetNowPlayingDrawable" format="reference"/>
+    <attr name="tweetSpoilerDrawable" format="reference"/>
     <attr name="dialogStyle" format="reference"/>
     <attr name="pressDrawable" format="reference"/>
     <attr name="focusDrawable" format="reference"/>
