4.x対応のために、ベクターリソースは app:srcCompat 属性で参照する必要がある
refs #207

--- a/Yukari/src/main/res/layout/activity_tweet.xml
+++ b/Yukari/src/main/res/layout/activity_tweet.xml
@@ -174,7 +174,7 @@
                 android:id="@+id/ibTweetSpoiler"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="?attr/tweetSpoilerDrawable"
+                app:srcCompat="?attr/tweetSpoilerDrawable"
                 android:visibility="gone"/>
 
             <ImageButton
