「未収載」「フォロワー限定」「ダイレクト」のアイコンをTLに表示
fix #220

--- a/Yukari/src/main/res/values/attrs.xml
+++ b/Yukari/src/main/res/values/attrs.xml
@@ -49,4 +49,8 @@
         <attr name="on_focused" format="reference"/>
     </declare-styleable>
     <attr name="listSortableHandleDrawable" format="reference"/>
+    <attr name="statusVisibilityPublicDrawable" format="reference"/>
+    <attr name="statusVisibilityUnlistedDrawable" format="reference"/>
+    <attr name="statusVisibilityPrivateDrawable" format="reference"/>
+    <attr name="statusVisibilityDirectDrawable" format="reference"/>
 </resources>
