--- a/Yukari/src/main/res/layout/row_tweet.xml
+++ b/Yukari/src/main/res/layout/row_tweet.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:baselineAligned="false">
@@ -25,7 +27,8 @@
             android:layout_height="40dp"
             android:layout_marginLeft="2dp"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true" />
+            android:layout_alignParentTop="true"
+            tools:src="@drawable/yukatterload"/>
 
         <TextView
             android:id="@+id/tweet_name"
@@ -96,8 +99,7 @@
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/tweet_accountcolor"
             android:layout_marginBottom="-2dp"
-            android:layout_marginLeft="-2dp"
-            android:src="@drawable/ic_secure"
+            app:srcCompat="?attr/statusVisibilityPrivateDrawable"
             android:visibility="gone" />
 
         <TextView
