--- a/Yukari/src/main/res/layout/fragment_profile.xml
+++ b/Yukari/src/main/res/layout/fragment_profile.xml
@@ -2,6 +2,7 @@
 
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -100,84 +101,110 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <Space
-            android:id="@+id/centerHorizontal"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_centerHorizontal="true"/>
+        <FrameLayout
+            android:id="@+id/frameLayout2"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="#f00"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <Button
+                android:id="@+id/btnBlock"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="☆お別れブロック☆"
+                android:visibility="gone"
+                android:enabled="false"
+                tools:visibility="visible"/>
+        </FrameLayout>
 
         <shibafu.yukari.view.ProfileButton
             android:id="@+id/cvProfileTweets"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_alignRight="@+id/centerHorizontal"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginRight="4dp"
+            android:layout_marginEnd="4dp"
             android:clickable="true"
             android:foreground="?attr/selectableItemBackground"
             app:iconSrc="?attr/profileTweetsDrawable"
-            app:text="Tweets"/>
+            app:text="Tweets"
+            app:layout_constraintTop_toBottomOf="@id/frameLayout2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/cvProfileFavorites"/>
 
         <shibafu.yukari.view.ProfileButton
             android:id="@+id/cvProfileFavorites"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/centerHorizontal"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
             android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp"
             android:clickable="true"
             android:foreground="?attr/selectableItemBackground"
             app:iconSrc="?attr/profileFavoritesDrawable"
-            app:text="Favorites"/>
+            app:text="Favorites"
+            app:layout_constraintTop_toBottomOf="@id/frameLayout2"
+            app:layout_constraintStart_toEndOf="@id/cvProfileTweets"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <shibafu.yukari.view.ProfileButton
             android:id="@+id/cvProfileFollows"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/cvProfileTweets"
-            android:layout_alignLeft="@+id/cvProfileTweets"
-            android:layout_alignRight="@+id/centerHorizontal"
             android:layout_marginTop="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginRight="4dp"
+            android:layout_marginEnd="4dp"
             android:clickable="true"
             android:foreground="?attr/selectableItemBackground"
             app:iconSrc="?attr/profileFollowsDrawable"
-            app:text="Follows"/>
+            app:text="Follows"
+            app:layout_constraintTop_toBottomOf="@+id/cvProfileTweets"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/cvProfileFollowers"/>
 
         <shibafu.yukari.view.ProfileButton
             android:id="@+id/cvProfileFollowers"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/cvProfileFavorites"
-            android:layout_alignLeft="@+id/centerHorizontal"
-            android:layout_alignRight="@+id/cvProfileFavorites"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
             android:clickable="true"
             android:foreground="?attr/selectableItemBackground"
             app:iconSrc="?attr/profileFollowersDrawable"
-            app:text="Followers"/>
+            app:text="Followers"
+            app:layout_constraintTop_toBottomOf="@+id/cvProfileFavorites"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/cvProfileFollows"/>
 
         <android.support.v7.widget.CardView
             android:id="@+id/cvProfileBio"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/cvProfileFollows"
-            android:layout_alignLeft="@+id/cvProfileTweets"
-            android:layout_alignRight="@id/cvProfileFavorites"
-            android:layout_marginTop="16dp">
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintTop_toBottomOf="@id/cvProfileFollows"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -206,11 +233,13 @@
             android:id="@+id/cvProfileDetail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/cvProfileBio"
-            android:layout_alignLeft="@+id/cvProfileTweets"
-            android:layout_alignRight="@id/cvProfileFavorites"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp">
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintTop_toBottomOf="@id/cvProfileBio"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -334,29 +363,7 @@
 
         </android.support.v7.widget.CardView>
 
-        <FrameLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:background="#f00">
-
-            <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="☆お別れブロック☆"
-                    android:id="@+id/btnBlock"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:visibility="gone"
-                    android:enabled="false"/>
-        </FrameLayout>
-
-    </RelativeLayout>
+    </android.support.constraint.ConstraintLayout>
 
     </android.support.v4.widget.NestedScrollView>
 
