--- a/Yukari/src/main/res/layout/fragment_mastodon_profile.xml
+++ b/Yukari/src/main/res/layout/fragment_mastodon_profile.xml
@@ -103,7 +103,8 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingBottom="8dp">
 
         <FrameLayout
             android:id="@+id/frameLayout2"
@@ -219,7 +220,6 @@
             android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
             app:layout_constraintTop_toBottomOf="@id/cvProfileBio"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
